@@ -75,6 +75,27 @@ function imagepicker_image_form($form_state, $img_id, $public = FALSE) {
   }
   $form['show'] = imagepicker_get_show_opts(isset($user->imagepicker_insert_defaults_show) ? $user->imagepicker_insert_defaults_show : variable_get('imagepicker_insert_defaults_show', 'full'));
   $form['link'] = imagepicker_get_link_opts(isset($user->imagepicker_insert_defaults_link) ? $user->imagepicker_insert_defaults_link : variable_get('imagepicker_insert_defaults_link', 'none'));
+
+  if (module_exists('imagecache') && variable_get('imagepicker_imagecache_enable', 0)) {
+    $presets = imagecache_presets();
+    $opts = array('' => t('None'));
+    if (count($presets)) {
+      foreach ($presets AS $preset) {
+        $opts[$preset['presetname']] = $preset['presetname'];
+      }
+      $form['presets_show'] = array(
+        '#type' => 'select',
+        '#title' => t('Presets for Show'),
+        '#options' => $opts,
+      );
+      $form['presets_link'] = array(
+        '#type' => 'select',
+        '#title' => t('Presets for Link'),
+        '#options' => $opts,
+      );
+    }
+  }
+
   $form['desc'] = array(
     '#type' => 'checkbox',
     '#title' => t('Show Description'),
@@ -92,6 +113,7 @@ function imagepicker_image_form($form_state, $img_id, $public = FALSE) {
       '#description' => t('You can add additional css here, eg. class="myclass". This will be inserted into the image tag'),
     );
   }
+
   $form['insert'] = array(
     '#type' => 'button',
     '#value' => t('Insert image'),
@@ -189,7 +211,7 @@ function _imagepicker_image_delete($img_id, $account=FALSE, $src='iframe', $supp
 /**
  * Menu callback; presents the image page for imagepicker
  */
-function imagepicker_image_page($img_id) {
+function imagepicker_image_page($img_id, $preset = FALSE) {
   global $base_url;
 
   $content = '';
@@ -202,11 +224,23 @@ function imagepicker_image_page($img_id) {
     // js link
     $account = user_load(array('uid' => $img['uid']));
     $link = (isset($account->imagepicker_default_pagelink) ? $account->imagepicker_default_pagelink : variable_get('imagepicker_default_pagelink', 1));
-    if ( variable_get('file_downloads', '1') == 2 ) {
-      $imgpath = imagepicker_get_image_path($img, 'full', array('uid' => $img['uid']));
+    if (variable_get('file_downloads', FILE_DOWNLOADS_PUBLIC) == FILE_DOWNLOADS_PRIVATE) {
+      if (module_exists('imagecache') && variable_get('imagepicker_imagecache_enable', 0) && $preset) {
+        $imgpath = imagepicker_get_image_path($img, 'full', array('uid' => $img['uid']), TRUE);
+        $imgpath = preg_replace("~__PRESET__~", $preset, $imgpath);
+      }
+      else {
+        $imgpath = imagepicker_get_image_path($img, 'full', array('uid' => $img['uid']));
+      }
     }
     else {
-      $imgpath = imagepicker_get_path(TRUE, $img) . $img['img_name'];
+      if (module_exists('imagecache') && variable_get('imagepicker_imagecache_enable', 0) && $preset) {
+        $imgpath = imagepicker_get_image_path($img, 'full', array('uid' => $img['uid']), TRUE);
+        $imgpath = preg_replace("~__PRESET__~", $preset, $imgpath);
+      }
+      else {
+        $imgpath = imagepicker_get_path(TRUE, $img) . $img['img_name'];
+      }
     }
     $content = theme('imagepicker_fullpage', $img, $imgpath, $link);
   }
@@ -2786,12 +2820,16 @@ function imagepicker_group_images_count($gid) {
 function imagepicker_box() {
   $a1 = FALSE;
   $a2 = 0;
+  $a3 = FALSE;
 
   if (arg(1)) {
     $a1 = arg(1);
   }
   if (arg(2) && is_numeric(arg(2))) {
     $a2 = arg(2);
+  }
+  if (arg(3) && $a2) {
+    $a3 = arg(3);
   }
 
   if ($a1 == 'browse') {
@@ -2807,7 +2845,7 @@ function imagepicker_box() {
     $content = imagepicker_image_edit($a2);
   }
   elseif ($a1 == 'image') {
-    $content = imagepicker_image_page($a2);
+    $content = imagepicker_image_page($a2, $a3);
   }
   elseif ($a1 == 'upload_postlet') {
     $content = imagepicker_postlet_page();
